rubocop: ignore context & describe when running Metrics/BlockLength
The default is not enough for RSpec.

--- a/.rubocop.yml
+++ b/.rubocop.yml
@@ -45,6 +45,9 @@ Style/FrozenStringLiteralComment:
 Metrics/BlockLength:
   CountComments: false
   Max: 25
+  IgnoredMethods:
+    - describe
+    - context
   Exclude:
     - 'Rakefile'
     - '**/*.rake'
